# is-tree

./: .gitignore  Cargo.toml  README.md
crates/is-tree/: Cargo.toml
crates/is-tree/src/: lib.rs  prelude.rs  unsafe_.rs  visitor_macro.rs
crates/is-tree/src/traits/: has_branch.rs  has_branches.rs  has_get.rs  has_path_segment.rs  is_path_segment.rs  mod.rs
crates/is-tree/tests/features/: mod.rs
is-tree/: Cargo.toml
is-tree-macro/: Cargo.toml
is-tree-macro/src/: has_branches.rs  has_get.rs  has_parent.rs  has_path_segment.rs  has_relative_access.rs  has_root.rs  lib.rs
is-tree-macro/src/enum_derive/: has_branches.rs  has_get.rs  has_parent.rs  has_path_segment.rs  has_relative_access.rs  has_root.rs  mod.rs
is-tree-macro/src/struct_derive/: has_branches.rs  has_get.rs  has_path_segment.rs  knows_owned.rs  mod.rs
is-tree-macro/src/traits/: mod.rs
is-tree-macro/src/type_/: mod.rs  path.rs
is-tree-macro/src/type_/enumeration/: mod.rs  variant.rs
is-tree-macro/src/type_/enumeration/traits/: has_branches.rs  has_get.rs  has_parent.rs  has_path_segment.rs  has_relative_access.rs  has_root.rs  mod.rs
is-tree-macro/src/type_/structure/: field.rs  mod.rs
is-tree-macro/src/type_/structure/traits/: has_branches.rs  has_get.rs  has_path_segment.rs  has_type_iterator.rs  knows_owned.rs  knows_relative_type.rs  knows_visitor.rs  mod.rs
is-tree/src/: lib.rs  prelude.rs  tree_iterator.rs  unsafe_.rs  visitor.rs  visitor_macro.rs
is-tree/src/iterator/: mod.rs  tree_iterator.rs  type_iterator.rs
is-tree/src/new_traits/: get.rs  mod.rs  parent.rs  relative.rs  root.rs  tree_iterator.rs
is-tree/src/path/: mod.rs  segment.rs
is-tree/src/traits/: has_branches.rs  has_get.rs  has_parent.rs  has_path_segment.rs  has_relative.rs  has_relative_access.rs  has_root.rs  has_value.rs  has_visitor.rs  has_visitor_constructor.rs  is_tree.rs  is_visitor.rs  knows_visitor.rs  knows_visitor_for.rs  mod.rs  tree_update.rs
is-tree/src/visitor/: has_branches.rs  has_get.rs  has_parent.rs  has_path.rs  has_relative_access.rs  has_visitor_constructor.rs  mod.rs
is-tree/src/visitor/root_visitor/: has_branches.rs  has_get.rs  has_parent.rs  has_path.rs  has_relative_access.rs  has_value.rs  mod.rs
is-tree/tests/: main.rs  multiple_branches.rs
is-tree/tests/features/: branches.rs  empty.rs  get.rs  mod.rs  relative_access.rs  type_iterator.rs  visitor.rs
is-tree/tests/hierarchy/: access.rs  iterator.rs  mod.rs  update.rs  visitors.rs
is-tree/tests/hierarchy/module/: has_branches.rs  has_get.rs  has_path_segment.rs  knows_relative_access_type.rs  mod.rs  type_iterator.rs  visitor.rs
is-tree/tests/hierarchy/visitors/: mod.rs
is-tree/tests/principles/: holder_agnostic_method.rs
src/: identifier.rs  lib.rs  new_visitor.rs  old_visitor.rs  path.rs  prelude.rs  visitor.rs
src/iterator/: mod.rs  tree_iterator.rs  tree_visitor.rs  type_iterator.rs
src/new_visitor/: root_visitor.rs
src/path/: mod.rs
src/traits/: has_branches.rs  has_get.rs  mod.rs  (+18 more)
tests/: main.rs  principles.rs  visitor.rs
(+63 files in other folders)
