[workspace.package]
version = "0.9.9"
edition = "2021"
description = "Everything is a tree"
license = "Apache-2.0"
documentation = "https://docs.rs/is-tree"
homepage = "https://github.com/sensorial-systems/is-tree"
repository = "https://github.com/sensorial-systems/is-tree"
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "crates/is-tree",
    "crates/is-tree-macro"
]

[workspace.dependencies]
enum-as-inner = "0.6.0"
is-tree-macro = { version = "0.9.7", path = "crates/is-tree-macro" }
is-tree = { version = "0.9.7", path = "crates/is-tree" }