[package]
name = "is-tree-macro"
version = "0.1.0"
edition = "2021"
description = "is-tree macro library"
license = "Apache-2.0"
documentation = "https://docs.rs/is-tree"
homepage = "https://github.com/sensorial-systems/is-tree"
repository = "https://github.com/sensorial-systems/is-tree"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"