[package]
name = "is-tree"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
enum-as-inner = "0.6.0"
is-tree-macro = "0.9.3"