[package]
name = "is-tree"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
enum-as-inner.workspace = true
is-tree-macro.workspace = true